update cSpell settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "custom": true,
     "internal-terms": false,
   },
+  "cSpell.diagnosticLevel": "Warning",
   "cSpell.enabled": true,
 
   "python.defaultInterpreterPath": "${workspaceRoot}/../.dotfiles-ansible/Scripts/python.exe",
