--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 !/.dotfiles-init/step007_setup_winget
 !/.dotfiles-init/step008_install_vs_code
 !/.dotfiles-init/step009_install_python
+!/.dotfiles-init/step010_install_rust
 
 !/.vscode
 /.vscode/*
